--- a/TV-BrowserSimpleMarkerPlugin/res/values/strings.xml
+++ b/TV-BrowserSimpleMarkerPlugin/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <string name="info">This app is a plugin for the app TV-Browser.\n\nIt cannot be used outside of TV-Browser.</string>
     <string name="app_name">TV-Browser SimpleMarkerPlugin</string>
     
     <string name="service_simplemarker_name">SimpleMarkerPlugin</string>
